--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,11 +30,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
       -
-        name: Build and push
+        name: Build
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-          push: ${{ github.event.inputs.confirm-push }}
+          push: false
           tags: compuware-ispw/ispwcli:${{ github.event.inputs.tag-ver }}
+      - name: Push
+        if: '{{ github.event.inputs.confirm-push }}'
+        id: push
+        run: |
+          docker push ghcr.io/compuware-ispw/ispwcli:${{ github.event.inputs.tag-ver }}
