--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -34,7 +34,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          push: false
+          push: '{{ github.event.inputs.confirm-push }}'
           tags: ghcr.io/compuware-ispw/ispwcli:${{ github.event.inputs.tag-ver }}
       #- name: Push
       #  id: push
