--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,7 +21,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Download Topaz CLI release
         run: |
-          ./dist/download.sh ${{ secrets.GITHUB_TOKEN }} "${{ secrets.GITHUB_TOKEN }}.gtk"
+          ./dist/download.sh ${{ secrets.GITHUB_TOKEN }} "${{ secrets.tag-ver }}.gtk"
       -
         name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
