--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,8 +19,13 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v2
-      - name: Download Topaz CLI release
+      - 
+        name: install curl
+        run: sudo apt-get -y install curl
+      - 
+        name: Download Topaz CLI release
         run: |
+          sudo apt-get -y install curl \
           ./dist/download.sh ${{ secrets.XDEVREG_DOWNLOAD }} v20.6.1.gtk compuware-ispw topaz-cli TopazCLI-linux.gtk.x86_64.zip ./tmp.zip
       -
         name: Setup Docker Buildx
