--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,11 +23,16 @@ jobs:
         name: Download Topaz CLI release
         run: |
           ./dist/download.sh ${{ secrets.XDEVREG_DOWNLOAD }} ${{ github.event.inputs.tag-ver }}.gtk compuware-ispw topaz-cli TopazCLI-linux.gtk.x86_64.zip ./dist/TopazCLI-linux.gtk.x86_64.zip
-      #- 
-      #  name: Wait / Sleep
-      #  uses: jakejarvis/wait-action@v0.1.0
-      #  with:
-      #    time: '45s'
+      - 
+        name: Wait / Sleep
+        uses: jakejarvis/wait-action@v0.1.0
+        with:
+          time: '45s'
+      - 
+        name: add and commit (tmp)
+        run: |
+          git add ./dist/TopazCLI-linux.gtk.x86_64.zip
+          git commit -m "tmp add" ./dist/TopazCLI-linux.gtk.x86_64.zip
       -
         name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
