--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -41,10 +41,14 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      -
-        name: Build
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: ${{ github.event.inputs.confirm-push }}
-          tags: ghcr.io/compuware-ispw/ispwcli:${{ github.event.inputs.tag-ver }}
+      - name: build image
+        run: |
+          docker build -t ghcr.io/compuware-ispw/ispwcli:v20.6.1
+
+      #-
+      #  name: Build
+      #  id: docker_build
+      #  uses: docker/build-push-action@v2
+      #  with:
+      #    push: ${{ github.event.inputs.confirm-push }}
+      #    tags: ghcr.io/compuware-ispw/ispwcli:${{ github.event.inputs.tag-ver }}
