--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -43,7 +43,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
       - name: build image
         run: |
-          docker build -t ghcr.io/compuware-ispw/ispwcli:v20.6.1
+          docker build -t ghcr.io/compuware-ispw/ispwcli:v20.6.1 .
 
       #-
       #  name: Build
