--- a/.github/workflows/publishDockerhub.yml
+++ b/.github/workflows/publishDockerhub.yml
@@ -48,6 +48,7 @@ jobs:
           docker build -t bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }} .
           if ${{ github.event.inputs.confirm-push }} == true ; then
             docker tag bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }} docker.com/bmctopaz/ispw:${{ github.event.inputs.tag-ver }}
+            docker image ls
             echo "Push... docker.com/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}"
             docker push docker.com/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}
           fi
