--- a/.github/workflows/publishDockerhub.yml
+++ b/.github/workflows/publishDockerhub.yml
@@ -34,19 +34,19 @@ jobs:
           username: ${{ secrets.DOCKER_ID }}
           password: ${{ secrets.DOCKER_TOKEN }}
       #Seems buggy, cannot handle dynamic download package asset, e.g., TopazCLI.zip during runtime
-      - 
-        name: Build
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          push: ${{ github.event.inputs.confirm-push }}
-          tags: docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}
       #- 
-      #  name: Build and push to Dockerhub
-      #  run: |
-      #    echo "Building... docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}"
-      #    docker build -t docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }} .
-      #    if ${{ github.event.inputs.confirm-push }} == true ; then
-      #      echo "Push... docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}"
-      #      docker push docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}
-      #    fi
+      #  name: Build
+      #  id: docker_build
+      #  uses: docker/build-push-action@v2
+      #  with:
+      #    push: ${{ github.event.inputs.confirm-push }}
+      #    tags: docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}
+      - 
+        name: Build and push to Dockerhub
+        run: |
+          echo "Building... docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}"
+          docker build -t docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }} .
+          if ${{ github.event.inputs.confirm-push }} == true ; then
+            echo "Push... docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}"
+            docker push docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}
+          fi
