run on self hosted machine for test

--- a/.github/workflows/publishDockerhub.yml
+++ b/.github/workflows/publishDockerhub.yml
@@ -14,7 +14,8 @@ on:
 
 jobs:
   publish-to-dockerhub:
-    runs-on: ubuntu-latest
+    #runs-on: ubuntu-latest
+    runs-on: [self-hosted, ubuntu20]
     steps:
       -
         name: Checkout
