--- a/.github/workflows/publishDockerhub.yml
+++ b/.github/workflows/publishDockerhub.yml
@@ -27,13 +27,13 @@ jobs:
       -
         name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
-      -
-        name: Login to Dockerhub
-        uses: docker/login-action@v1
-        with:
-          registry: docker.com
-          username: bmctopaz
-          password: ${{ secrets.DOCKER_TOKEN }}
+      #-
+      #  name: Login to Dockerhub
+      #  uses: docker/login-action@v1
+      #  with:
+      #    registry: docker.com
+      #    username: bmctopaz
+      #    password: ${{ secrets.DOCKER_TOKEN }}
       #Seems buggy, cannot handle dynamic download package asset, e.g., TopazCLI.zip during runtime
       #- 
       #  name: Build
@@ -45,6 +45,7 @@ jobs:
       - 
         name: Build and push to Dockerhub
         run: |
+          echo ${{ secrets.DOCKER_TOKEN }} | docker login --username bmctopaz --password-stdin
           echo "Building... docker.io/bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }}"
           docker build -t bmctopaz/ispwcli:${{ github.event.inputs.tag-ver }} .
           if ${{ github.event.inputs.confirm-push }} == true ; then
