--- a/.github/workflows/publishGhcr.yml
+++ b/.github/workflows/publishGhcr.yml
@@ -22,7 +22,7 @@ jobs:
       - 
         name: Download Topaz CLI release
         run: |
-          ./dist/download.sh ${{ secrets.XDEVREG_DOWNLOAD }} ${{ github.event.inputs.tag-ver }} compuware-ispw topaz-cli TopazCLI-linux.gtk.x86_64.zip ./dist/TopazCLI-linux.gtk.x86_64.zip
+          ./dist/download.sh ${{ secrets.XDEVREG_DOWNLOAD }} ${{ github.event.inputs.tag-ver }} bmc-compuware topaz-cli TopazCLI-linux.gtk.x86_64.zip ./dist/TopazCLI-linux.gtk.x86_64.zip
       -
         name: Setup Docker Buildx
         uses: docker/setup-buildx-action@v1
